# sandboxd-orch/docs/orchestrator_swagger.json
@@ -210,6 +210,63 @@
                         }
                     }
                 }
+            },
+            "patch": {
+                "description": "Updates node scheduling policy fields such as spec.unschedulable.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "orchestrator-node"
+                ],
+                "summary": "Update node scheduling policy",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Node id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Node patch request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/types.PatchNodeObjectRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.NodeResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    }
+                }
             }
         },
         "/api/v1/nodes/{id}/heartbeat": {
@@ -901,6 +958,12 @@
                 "resource": {
                     "$ref": "#/definitions/model.ResourceSpec"
                 },
+                "volumeMounts": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.VolumeMount"
+                    }
+                },
                 "workDir": {
                     "type": "string"
                 }
@@ -929,6 +992,12 @@
                 },
                 "readinessProbe": {
                     "$ref": "#/definitions/model.ReadinessProbeSpec"
+                },
+                "volumes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.VolumeSpec"
+                    }
                 }
             }
         },
@@ -985,6 +1054,31 @@
                     "type": "string"
                 },
                 "memory": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.VolumeMount": {
+            "type": "object",
+            "properties": {
+                "mountPath": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "readOnly": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "model.VolumeSpec": {
+            "type": "object",
+            "properties": {
+                "ephemeralStorage": {
+                    "type": "string"
+                },
+                "name": {
                     "type": "string"
                 }
             }
@@ -1072,6 +1166,9 @@
                 "success_streak": {
                     "type": "integer"
                 },
+                "unschedulable": {
+                    "type": "boolean"
+                },
                 "updated_at": {
                     "type": "string"
                 }
@@ -1085,6 +1182,9 @@
                 },
                 "port": {
                     "type": "integer"
+                },
+                "unschedulable": {
+                    "type": "boolean"
                 }
             }
         },
@@ -1135,6 +1235,22 @@
                 "NodeStateReady",
                 "NodeStateNotReady"
             ]
+        },
+        "types.PatchNodeObjectRequest": {
+            "type": "object",
+            "properties": {
+                "spec": {
+                    "$ref": "#/definitions/types.PatchNodeObjectSpec"
+                }
+            }
+        },
+        "types.PatchNodeObjectSpec": {
+            "type": "object",
+            "properties": {
+                "unschedulable": {
+                    "type": "boolean"
+                }
+            }
         },
         "types.ReadinessProbeSpec": {
             "type": "object",
@@ -1211,6 +1327,12 @@
                 },
                 "resource": {
                     "$ref": "#/definitions/types.SandboxResource"
+                },
+                "volume_mounts": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.SandboxVolumeMount"
+                    }
                 },
                 "work_dir": {
                     "type": "string"
@@ -1299,6 +1421,12 @@
                 },
                 "ttl_seconds": {
                     "type": "integer"
+                },
+                "volumes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.SandboxVolumeSpec"
+                    }
                 }
             }
         },
@@ -1327,6 +1455,31 @@
                     "$ref": "#/definitions/types.SandboxPhase"
                 },
                 "sandboxd_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "types.SandboxVolumeMount": {
+            "type": "object",
+            "properties": {
+                "mount_path": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "read_only": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "types.SandboxVolumeSpec": {
+            "type": "object",
+            "properties": {
+                "ephemeral_storage": {
+                    "type": "string"
+                },
+                "name": {
                     "type": "string"
                 }
             }
